src/test/ui/type-alias-impl-trait/generic_not_used.stderr
error: at least one trait must be specified
  --> $DIR/generic_not_used.rs:5:33
   |
LL | type WrongGeneric<T: 'static> = impl 'static;
   |                                 ^^^^^^^^^^^^

error[E0277]: the size for values of type `V` cannot be known at compilation time
  --> $DIR/generic_not_used.rs:5:1
   |
LL | type WrongGeneric<T: 'static> = impl 'static;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
...
LL | fn wrong_generic<U: 'static, V: 'static>(_: U, v: V) -> WrongGeneric<U> {
   |                              -- help: consider further restricting this bound: `V: std::marker::Sized +`
LL |
LL |     v
   |     - this returned value is of type `V`
   |
   = help: the trait `std::marker::Sized` is not implemented for `V`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: the type `V` must only rely on bounds defined on the type

error: type parameter `V` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/generic_not_used.rs:8:73
   |
LL |   fn wrong_generic<U: 'static, V: 'static>(_: U, v: V) -> WrongGeneric<U> {
   |  _________________________________________________________________________^
LL | |
LL | |     v
LL | | }
   | |_^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
